# Agent-Project

./: .gitignore  DEV_GUIDELINES.md  README.md  model_improved.py  requirements.txt  test.ipynb
config/: .env.example
master_agents/: README.md  final_results.md  model_improved.py  model_v1.py  performance_analysis.md  pyproject.toml  setup_environment.py
master_agents/src/master_agents/: crew.py  main.py
master_agents/src/master_agents/config/: agents.yaml  tasks.yaml
news-ai-project/: README.md  simple_news.py
news-ai-project/agents/: news_team.py
news-ai-project/output/articles/: artikel_1_Regeringens_nya_klimatpaket_möts_av_hård_kritik.md  artikel_2_Kommunalval_2026__Ökad_polarisering_väntas.md  artikel_3_Debatt_om_höjda_skatter_för_att_finansiera_välfärd.md
news-ai-project/webapp/: index.html  main.py  script.js  styles.css
news-ai-project/webapp/static/: index.html  script.js  script_new.js  script_old.js  style.css  styles.css
scripts/: file_helper.py
