[project]
name = "master_agents"
version = "0.1.0"
description = "master-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
master_agents = "master_agents.main:run"
run_crew = "master_agents.main:run"
train = "master_agents.main:train"
replay = "master_agents.main:replay"
test = "master_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
